# pocket-relay-miner

./: .dockerignore  .gitignore  CLAUDE.md  COMPRESSION_FIX_SUMMARY.md  COMPRESSION_TEST_RESULTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REDIS.md  REDIS_OPTIMIZATION.md  REVENUE_LOSS_FALSE_POSITIVES.md  TODO.md  Tiltfile  VERIFICATION_PLAN.md  config.miner.example.yaml  config.miner.schema.yaml  config.relayer.example.yaml  config.relayer.schema.yaml  go.mod  go.sum  main.go  version.go
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
cache/: account_cache.go  account_cache_test.go  application_cache.go  application_cache_test.go  block_publisher.go  block_subscriber.go  block_subscriber_adapter.go  client_adapters.go  client_adapters_test.go  interface.go  metrics.go  orchestrator.go  orchestrator_known_set_test.go  orchestrator_wiring_test.go  proof_params.go  pubsub.go  pubsub_test.go  redis_block_client_adapter.go  redis_block_client_adapter_test.go  service_cache.go  service_cache_test.go  service_factor_events.go  session_cache.go  session_cache_growth_test.go  session_cache_test.go  session_params.go  shared_params.go  shared_params_growth_test.go  shared_params_singleton.go  supplier_cache.go  supplier_cache_test.go  supplier_params.go  warmer.go
client/: block_subscriber.go  block_subscriber_integration_test.go  block_subscriber_test.go
cmd/: cmd_miner.go  cmd_redis.go  cmd_redis_debug.go  cmd_relay.go  cmd_relay_test.go  cmd_relayer.go  (+18 more)
examples/relay-signing/rust/: Cargo.toml
examples/relay-signing/rust/src/: lib.rs  main.rs
(+418 files in other folders)
